# noto

./: CMakeLists.txt
docs/: design.md  storage.md
src/: CMakeLists.txt
src/core/: Blob.cpp  CMakeLists.txt  Commit.cpp  Object.cpp  ObjectID.cpp  Patch.cpp  Tree.cpp
src/core/include/: Blob.hpp  Commit.hpp  Object.hpp  ObjectID.hpp  Patch.hpp  Tree.hpp
tests/: CMakeLists.txt
